sravani/force-app/main/default/objects/Position__c/Position__c.object-meta.xml
<CustomObject>
    <label>Position</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>PositionId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Positioins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>