sravani/force-app/main/default/objects/Position__c/fields/hiringmanger__c.field-meta.xml
<CustomField>
    <fullName>hiringmanger__c</fullName>
    <label>hiringmanger</label>
    <referenceTo>HiringManager__c</referenceTo>
    <relationshipLabel>Positions</relationshipLabel>
    <relationshipName>Positions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>