sravani/force-app/main/default/objects/Position__c/fields/Hremailid__c.field-meta.xml
<CustomField>
    <fullName>Hremailid__c</fullName>
    <label>Hremailid</label>
    <type>Email</type>
</CustomField>