sravani/force-app/main/default/objects/Position__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hyd</fullName>
            </value>
            <value>
                <fullName>Bang</fullName>
            </value>
            <value>
                <fullName>Mas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>