sravani/force-app/main/default/objects/Position__c/fields/Maxpay__c.field-meta.xml
<CustomField>
    <fullName>Maxpay__c</fullName>
    <label>Maxpay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>