sravani/force-app/main/default/objects/Position__c/fields/MilestoneDate__c.field-meta.xml
<CustomField>
    <fullName>MilestoneDate__c</fullName>
    <label>MilestoneDate</label>
    <type>Date</type>
</CustomField>