sravani/force-app/main/default/objects/Position__c/fields/Minpay__c.field-meta.xml
<CustomField>
    <fullName>Minpay__c</fullName>
    <label>Minpay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>