sravani/force-app/main/default/objects/Position__c/fields/Noofpositions__c.field-meta.xml
<CustomField>
    <fullName>Noofpositions__c</fullName>
    <label>Noofpositions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>