sravani/force-app/main/default/objects/Position__c/fields/Position_Status__c.field-meta.xml
<CustomField>
    <fullName>Position_Status__c</fullName>
    <label>Position Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Inprogress</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Filled</fullName>
            </value>
            <value>
                <fullName>Never Fill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>