sravani/force-app/main/default/objects/Position__c/fields/PositionDescription__c.field-meta.xml
<CustomField>
    <fullName>PositionDescription__c</fullName>
    <label>PositionDescription</label>
    <type>TextArea</type>
</CustomField>