sravani/force-app/main/default/objects/Position__c/fields/Skillset__c.field-meta.xml
<CustomField>
    <fullName>Skillset__c</fullName>
    <label>Skillset</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>java</fullName>
            </value>
            <value>
                <fullName>dotnet</fullName>
            </value>
            <value>
                <fullName>salesforce</fullName>
            </value>
            <value>
                <fullName>javascript</fullName>
            </value>
            <value>
                <fullName>apex</fullName>
            </value>
            <value>
                <fullName>lwc</fullName>
            </value>
            <value>
                <fullName>integeration</fullName>
            </value>
            <value>
                <fullName>python</fullName>
            </value>
            <value>
                <fullName>php</fullName>
            </value>
            <value>
                <fullName>reactjs</fullName>
            </value>
            <value>
                <fullName>sql</fullName>
            </value>
            <value>
                <fullName>oracle</fullName>
            </value>
            <value>
                <fullName>nodejs</fullName>
            </value>
            <value>
                <fullName>mongodb</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>